Add proper icons for geostory audio download

--- a/geostory/templates/geostory/edit_geostory.html
+++ b/geostory/templates/geostory/edit_geostory.html
@@ -29,7 +29,7 @@
                 <label>Audio file</label>
                 Download now
                 <a href="{{ geostory.storyUri }}" class="mdc_editor_external_link">
-                    <i class="material-icons mdc-icon-button__icon">cloud_download</i>
+                    <i class="material-icons mdc-icon-button__icon">get_app</i>
                 </a>
                 <!--<audio controls>
                     <source src="{{ geostory.storyUri }}" type="audio/mp4">
