--- a/user_logging_processor/templates/default_header.html
+++ b/user_logging_processor/templates/default_header.html
@@ -9,5 +9,15 @@
                     {% endif %}
                     <span class="mdc-top-app-bar__title">{{ title }}</span>
                 </section>
+
+                <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+                    {%  for item in actions %}
+                        <a href="{{ item.uri }}"
+                           class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                           aria-label="{{ item.title }}">
+                            {{ item.mdc_icon }}
+                        </a>
+                    {%  endfor %}
+                </section>
             </div>
         </header>
