--- a/family/templates/edit_family_setting.html
+++ b/family/templates/edit_family_setting.html
@@ -14,7 +14,7 @@
             <p>
                 <label>Last bluetooth sync</label>
                 {{ family_setting.caregiverLastSync }}
-                <a href="/fitness/refresh/{{ family }}" class="mdc_editor_external_link">
+                <a href="{{ fitness_sync_uri }}" class="mdc_editor_external_link">
                     <i class="material-icons mdc-button__icon" aria-hidden="true">sync</i>
                 </a>
             </p>
@@ -25,7 +25,7 @@
             <p>
                 <label>Last bluetooth sync</label>
                 {{ family_setting.childLastSync }}
-                <a href="/fitness/refresh/{{ family }}" class="mdc_editor_external_link">
+                <a href="{{ fitness_sync_uri }}" class="mdc_editor_external_link">
                     <i class="material-icons mdc-button__icon" aria-hidden="true">sync</i>
                 </a>
             </p>
