Add various minor UI refinemens

--- a/family/templates/view_all_families.html
+++ b/family/templates/view_all_families.html
@@ -11,8 +11,7 @@
                 <thead>
                     <tr class="mdc-data-table__header-row">
                         <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Family ID</th>
-                        <th class="mdc-data-table__header-cell" role="columnheader" scope="col"></th>
-                        <th class="mdc-data-table__header-cell" role="columnheader" scope="col"></th>
+                        <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Action</th>
                     </tr>
                 </thead>
                 <tbody class="mdc-data-table__content">
@@ -27,13 +26,6 @@
                                 <div class="mdc-button__ripple"></div>
                                 <i class="material-icons mdc-button__icon" aria-hidden="true">edit</i>
                                 Edit Setting
-                            </a>
-                        </td>
-                        <td class="mdc-data-table__cell">
-                            <a href="edit/bluetooth/{{ family }}" class="mdc-button">
-                                <div class="mdc-button__ripple"></div>
-                                <i class="material-icons mdc-button__icon" aria-hidden="true">bluetooth</i>
-                                Edit Fitness Trackers
                             </a>
                         </td>
                     </tr>
