--- a/geostory/templates/geostory/edit_geostory.html
+++ b/geostory/templates/geostory/edit_geostory.html
@@ -44,7 +44,7 @@
                         {{ geostory_form.as_p }}
                         {{ meta_form.as_p }}
                         <br/>
-                        <button class="mdc-button" value="Save">
+                        <button class="mdc-button mdc-button--raised" value="Save">
                             <div class="mdc-button__ripple"></div>
                             <span class="mdc-button__label">Save</span>
                         </button>
