Add link to the admin pages for the app

--- a/storywell_app_admin/templates/default_nav.html
+++ b/storywell_app_admin/templates/default_nav.html
@@ -27,6 +27,16 @@
                     <span class="mdc-list-item__text">Logging</span>
                 </a>
                 {%  endif %}
+
+                <hr class="mdc-list-divider">
+                <h6 class="mdc-list-group__subheader">Settings</h6>
+                <a class="mdc-list-item" href="/admin">
+                    <span class="mdc-list-item__text">App Admin</span>
+                </a>
+                <a class="mdc-list-item" href="https://wellness-test.ccs.neu.edu/storytelling_dev/admin">
+                    <span class="mdc-list-item__text">Django Admin</span>
+                </a>
+
             </div>
         </div>
     </aside>
