--- a/family/templates/view_all_families.html
+++ b/family/templates/view_all_families.html
@@ -6,6 +6,13 @@
     {% include "default_nav.html" %}
     <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
     <main class="mdc-body">
+        {% if messages %}
+        <ul class="messages">
+        {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+        </ul>
+        {% endif %}
         <div class="mdc-data-table">
             <table class="mdc-data-table__table" aria-label="GeoStories">
                 <thead>
