Add navigation drawer back to the edit pages

--- a/family/templates/edit_family_setting.html
+++ b/family/templates/edit_family_setting.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     {% include "default_header.html" %}
+    {% include "default_nav.html" %}
     <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
     <main class="mdc-body">
         {% if messages %}
