--- a/geostory/templates/geostory/edit_geostory.html
+++ b/geostory/templates/geostory/edit_geostory.html
@@ -3,6 +3,7 @@
 {% include "default_html_head.html" %}
 <body>
     {% include "default_header.html" %}
+    {% include "default_nav.html" %}
     <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
     <main class="mdc-body">
         <div class="mdc-custom-form">
