Add a feature to comput family fitness averages

--- a/fitness/templates/view_all_family_fitness.html
+++ b/fitness/templates/view_all_family_fitness.html
@@ -11,7 +11,7 @@
                     <thead>
                         <tr class="mdc-data-table__header-row">
                             <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Family ID</th>
-                            <th class="mdc-data-table__header-cell" role="columnheader" scope="col"></th>
+                            <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Action(s)</th>
                         </tr>
                     </thead>
                     <tbody class="mdc-data-table__content">
