--- a/fitness/templates/view_family_fitness.html
+++ b/fitness/templates/view_family_fitness.html
@@ -12,8 +12,12 @@
                 <thead>
                     <tr class="mdc-data-table__header-row">
                         <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Date</th>
-                        <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader" scope="col">Caregiver's Steps</th>
-                        <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader" scope="col">Child Steps</th>
+                        <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader" scope="col">
+                            Caregiver's Steps<br/>(personId={{ data.caregiver_person_id }})
+                        </th>
+                        <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader" scope="col">
+                            Child Steps<br/>(personId={{ data.child_person_id }})
+                        </th>
                     </tr>
                 </thead>
                 <tbody class="mdc-data-table__content">
