--- a/geostory/templates/geostory/view_all_geostories.html
+++ b/geostory/templates/geostory/view_all_geostories.html
@@ -51,6 +51,10 @@
                             {% endif %}
                         </td>
                         <td class="mdc-data-table__cell">
+                            <a href="{{ geostory.storyUri }}" class="mdc-button">
+                                <div class="mdc-button__ripple"></div>
+                                <i class="material-icons mdc-icon-button__icon">get_app</i> Download
+                            </a>
                             <a href="edit/{{ geostory.storyId }}" class="mdc-button">
                                 <div class="mdc-button__ripple"></div>
                                 <i class="material-icons mdc-button__icon" aria-hidden="true">edit</i>
