--- a/storywell_app_admin/templates/default_nav.html
+++ b/storywell_app_admin/templates/default_nav.html
@@ -30,10 +30,11 @@
 
                 <hr class="mdc-list-divider">
                 <h6 class="mdc-list-group__subheader">Settings</h6>
-                <a class="mdc-list-item" href="/admin">
+                <a href="/admin" class="mdc-list-item" target="_blank">
                     <span class="mdc-list-item__text">App Admin</span>
                 </a>
-                <a class="mdc-list-item" href="https://wellness-test.ccs.neu.edu/storytelling_dev/admin">
+                <a href="https://wellness-test.ccs.neu.edu/storytelling_dev/admin"
+                class="mdc-list-item" target="_blank">
                     <span class="mdc-list-item__text">Django Admin</span>
                 </a>
 
