--- a/staticfiles/global.css
+++ b/staticfiles/global.css
@@ -155,6 +155,13 @@ ul, ol {
 	.invisibleInPrint {
 		display: none;
 	}
+
+	span.emotion {
+		background: #ffecb3;
+		border-radius: 4px;
+    	display:inline-block;
+    	padding: 0 4px;
+	}
 }
 
 .mdc-body {
