--- a/user_logging/templates/view_minute_logs.html
+++ b/user_logging/templates/view_minute_logs.html
@@ -38,7 +38,7 @@
                 </td>
                 {% if min_values.edit_uri %}
                 <td><!--suppress HtmlUnknownTarget -->
-                    <a href="{{ min_values.edit_uri }}" class="invisibleInPrint">Edit</a>
+                    <a href="{{ min_values.edit_uri }}" class="invisibleInPrint" target="_blank">Edit</a>
                 </td>
                 {% endif %}
             </tr>
