--- a/staticfiles/global.css
+++ b/staticfiles/global.css
@@ -157,7 +157,7 @@ ul, ol {
 	}
 
 	span.emotion {
-		background: #ffecb3;
+		background: #ffecb3 !important;
 		border-radius: 4px;
     	display:inline-block;
     	padding: 0 4px;
